# livekit-voice-agent-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  uv.toml
src/: agent.py
src/agent/: __init__.py  backend.py  config.py  constants.py  contracts.py  lifecycle.py  prompt_loader.py  recency.py  rejoin.py  transcript.py  voice_agent.py  voice_context.py  voices.py  web_search.py  worker.py
src/agent/prompts/: runtime_policy.md  search_already_completed.md  search_auto.md  search_forbidden.md  search_query_description.md  search_query_hint.md  search_required.md  search_required_hint.md  search_tool_description.md  voice_instructions.md
tests/: test_agent_eval.py  test_backend.py  test_config.py  test_contracts.py  test_lifecycle.py  test_prompt_loader.py  test_recency.py  test_rejoin.py  test_transcript.py  test_voice_agent.py  test_voice_context.py  test_voices.py  test_web_search.py  test_worker.py
