[project]
name = "realtime-chat-livekit-voice-agent"
version = "0.1.0"
description = "Async Python LiveKit voice worker"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "httpx>=0.28.1,<0.29",
  "livekit-agents>=1.6.4,<1.7",
  "livekit-plugins-ai-coustics>=0.3,<0.4",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.12,<3",
  "python-dotenv>=1.2,<2",
]

[dependency-groups]
dev = [
  "poethepoet>=0.47,<0.48",
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "respx>=0.22,<0.23",
  "ruff>=0.15,<0.16",
  "ty>=0.0.50,<0.1",
]

[tool.uv]
package = false

[tool.poe.env]
PYTHONPATH = "src"

[tool.poe.tasks]
format = "ruff format ."
format-check = "ruff format --check ."
lint = "ruff check ."
lint-fix = "ruff check --fix ."
typecheck = "ty check --extra-search-path src src tests"
test = "pytest -m 'not livekit_eval'"
test-eval = { cmd = "pytest -m livekit_eval", env = { RUN_LIVEKIT_EVALS = "true" } }
compile = "python -m compileall -q src tests"
import-check = "python -c 'import agent'"
download-files = "python -m livekit.agents download-files"
dev = "python src/agent.py dev"
start = "python src/agent.py start"
check = [
  "format-check",
  "lint",
  "typecheck",
  "test",
  "compile",
  "import-check",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]
extend-exclude = ["graphify-out"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E4", "E7", "E9", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["agent"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
asyncio_default_test_loop_scope = "function"
asyncio_mode = "auto"
markers = [
  "livekit_eval: credential-gated evaluation that may call LiveKit Inference",
]
pythonpath = ["src"]
testpaths = ["tests"]
